tests/sumo/extended/vaporizer/errors/end_not_numeric/errors.sumo
Error: Attribute 'end' in definition of a vaporizer is not a time value.
Quitting (on error).
